--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:gravity="center"
+        android:gravity="center|left"
         android:text="TextView"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
 </LinearLayout>
