--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:gravity="center|left">
+    android:gravity="center|start">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_weight="0"
+        android:contentDescription="@string/album_cover_image_description"
         app:srcCompat="@drawable/ic_menu_gallery" />
 
     <TextView
@@ -20,8 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:gravity="center|left"
-        android:text="TextView"
+        android:gravity="center|start"
+        android:text="@string/music_title"
         android:textSize="18sp" />
 
 </LinearLayout>
