--- a/app/src/main/res/layout/fragment_current_music_track.xml
+++ b/app/src/main/res/layout/fragment_current_music_track.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/ic_menu_slideshow"
+        app:srcCompat="@drawable/ic_menu_slideshow"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
