Basic music player

--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -8,6 +8,7 @@
     android:gravity="center|start">
 
     <ImageView
+        android:id="@+id/trackImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_weight="0"
