--- a/app/src/main/res/layout/fragment_current_music_track.xml
+++ b/app/src/main/res/layout/fragment_current_music_track.xml
@@ -16,11 +16,11 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        app:srcCompat="@drawable/ic_menu_slideshow"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_menu_slideshow" />
 
     <ImageView
         android:id="@+id/playImage"
