--- a/app/src/main/res/layout/fragment_current_music_track.xml
+++ b/app/src/main/res/layout/fragment_current_music_track.xml
@@ -91,8 +91,9 @@
         android:layout_marginLeft="176dp"
         android:layout_marginEnd="176dp"
         android:layout_marginRight="176dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/current_song_title"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/playImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
